<resources>
    <string name="app_name">PortalEvent</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="form_register">Register</string>

    <string name="username">Username</string>
    <string name="category">Category</string>
    <string name="email">Email</string>
    <string name="jk">Jenis Kelamin</string>
    <string name="image">Link Image</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="apakah_belum_punya_akun_register_sekarang">Apakah belum punya akun? Register sekarang</string>
    <string name="welcome">WELCOME</string>
    <string name="name">Nama</string>
    <string name="alamt">Alamat</string>
    <string name="notelpon">No Telpon</string>
    <string name="register">Register</string>
    <string name="belum_punya_akun_silahkan_register">Belum Punya Akun ? Silahkan Register</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="detail"><u>Detail</u></string>
    <string name="detail_categories">Detail Categories</string>
    <string name="categories">Categories</string>
    <string name="pilih_tanggal">Pilih Tanggal</string>
    <string name="jumlah">Jumlah</string>
    <string name="ketenrangan">Keterangan</string>
    <string name="silahkan_isi_detail">Silahkan Isi detail</string>
</resources>
