<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">


    <androidx.appcompat.widget.AppCompatTextView
        style="@style/TextAppearance.App.TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/form_register"
        android:textSize="@dimen/text_24"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatEditText
            style="@style/TextAppearance.App.TextView"
            android:textSize="@dimen/text_16"
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/name" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space">

        <androidx.appcompat.widget.AppCompatEditText
            style="@style/TextAppearance.App.TextView"
            android:textSize="@dimen/text_16"

            android:id="@+id/edt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space">

        <androidx.appcompat.widget.AppCompatEditText
            style="@style/TextAppearance.App.TextView"
            android:textSize="@dimen/text_16"

            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space">

        <androidx.appcompat.widget.AppCompatEditText

            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/alamt" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space">

        <androidx.appcompat.widget.AppCompatEditText
            style="@style/TextAppearance.App.TextView"
            android:textSize="@dimen/text_16"

            android:id="@+id/edt_notelpon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/notelpon"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        style="@style/TextAppearance.App.TextView"
        android:textSize="@dimen/text_16"
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_x3"
        android:background="@color/colorPrimary"
        android:text="@string/register"
        android:textColor="#0C0C0C"
         />

    <ProgressBar
        android:id="@+id/pb_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:visibility="gone" />


</androidx.appcompat.widget.LinearLayoutCompat>